# bitrix-helper

./: README.md  docker-compose.yml  pyproject.toml
bitrix_helper/bitrixConnect/: Dockerfile  chatBot.py  createBot.py  get_refresh_token.py  token.txt
bitrix_helper/crm/: crmWork.py  fastapiWork.py  handlerCrm.py  workBitrix.py
bitrix_helper/crm_handler/: crmWork.py  fastapiWork.py  handlerCrm.py  postgreWork.py  pyproject.toml  workBitrix.py
bitrix_helper/generateAnswer/: Dockerfile  chat.py  fastapiWork.py  gptunnel.py  helper.py  pyproject.toml  searchWeb.py  transcibe_video.py  transcript.txt  workOllama.py  workYoutube.py  yandexSpeach.py
bitrix_helper/handlerMessage/: Dockerfile  chainCRMwork.py  fastapiWork.py  googleWork.py  handler.py  helper.py  keyboard.py  pyproject.toml  telemostWork.py
bitrix_helper/importer/: All Contacts 4-22-2024 5-26-12 PM (1).xlsx  fastapiWork.py  handlers.py  workOllama.py  xslxWork.py
bitrix_helper/senderMessage/: fastapiWork.py  handlersBitrix.py  handlersTelegram.py  keyboardWork.py  postgreWork.py  workTelegram-del.py
bitrix_helper/telegramConnect/: fastapiWork.py  handlers.py  helper.py  postgreWork.py
bitrix_helper/vectorDBwork/: Dockerfile  chromaDBwork.py  fastapiWork.py  pyproject.toml  workSelenium.py
tests/: genTextTest.py  testSteam.py
