[tool.poetry]
name = "bitrix-helper"
version = "0.1.0"
description = ""
authors = ["Igor Gerasimov <gerasimov.igor.98@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
loguru = "^0.7.2"
fast-bitrix24 = "^1.8.0"
pybitrix24 = "^1.1.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
